Bug #36119 --> implement DoContent for nsBrowserInstance. This broke over the weekend and caused us to fail to load browser urls in a current browser window from the mail window.